fixed title. fixed history wrong font size. fixed nav focus outline.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -341,3 +341,7 @@ button.tb-modal-btn.tb-modal-btn-close.btn.btn-default:hover {
 .brand.nav-item a.nav-link {
     border: none;
 }
+
+a.nav-link.active:focus {
+   outline: 0;
+}
